@@ -11,7 +11,9 @@ documents those changes that are of interest to users and admins.
  -- Fixed bug with aix not looking in the correct dir for the proctrack
     include files
  -- Removed global_srun.* from common merged it into srun proper
- -- Added bluegene troubleshooting 
+ -- Added bluegene section to troubleshooting guide (web page). 
+ -- NOTE: Requires cold-start when moving from 1.2.0-pre6, save state 
+    info for jobs changed.
 
 * Changes in SLURM 1.2.0-pre6
 =============================
@@ -501,6 +503,9 @@ documents those changes that are of interest to users and admins.
     the number of requested tasks.
  -- sched/backfill to schedule around jobs that are hung in a completing 
     state.
+ -- Avoid possibly re-running the epilog for a job on slurmctld restart or 
+    reconfig by saving and restoring a hostlist of nodes still completing 
+    the job.
 
 * Changes in SLURM 1.0.15
 =========================
